# progenitor-extras

./: CHANGELOG.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  release.toml  rustfmt.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
crates/progenitor-extras/: Cargo.toml  README.md
crates/progenitor-extras/src/: lib.rs  retry.rs
crates/progenitor-extras/tests/integration/: retry.rs
